k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
    environment: staging
    app: replytics
  annotations:
    kubernetes.io/description: "Replytics staging environment"
